--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ html {
 }
 .dropMenu ul li a {
 	text-decoration: none;
-	font-size: 1.5rem;
+	font-size: 10px;
 	font-weight: 500;
 	color: #ffffff;
 	transition: all 0.5s ease;
@@ -151,9 +151,11 @@ body{
 .contact .form{
   padding-left: 130px;
   margin-left: 100px;
+  color: grey;
+  font-size: 20px;
 }
 .contact h3{
-  color:palevioletred;
+  color:rgb(236, 69, 208);
 }
 .contact input{
   width: 75%;
@@ -174,7 +176,6 @@ body{
 
 .banner-content {
   position: absolute;
-  z-index: 99999;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -189,18 +190,11 @@ body{
   width: 100%;
   height: 100vh;
   display: block;
+  opacity: 0.5;
+  background: linear-gradient(grey,0.5);
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  opacity: .5;
-  background-color: black;
-  z-index: 999;
-  height: 100%;
-}
+
 
 .ban-btn {
   border: none;
@@ -308,10 +302,12 @@ section .cards .text-card h3{
 }
 .elementor{
 	justify-content: space-between;
+	
+	margin-left: 5%;
 }
 .infobox2{
 	margin-top: 20px;
-	margin-right: -150px;
+	margin-right: -200px;
 	
 }
 .infocard{
@@ -349,7 +345,7 @@ section .cards .text-card h3{
 	padding-right: 20px;
 }
 .Footer_header p {
-	font-size: 1rem;
+	font-size: 13px;
 }
 .Footer_columns_holder {
 	width: 100%;
@@ -367,14 +363,14 @@ section .cards .text-card h3{
 	letter-spacing: 2px;
 }
 .Footer_columns h1 {
-	font-size: 1rem;
+	font-size: 15px;
 	color: white;
 	font-weight: 600;
 }
 .Footer_columns a {
 	width: fit-content;
 	text-decoration: none;
-	font-size: 1rem;
+	font-size: 13px;
 	color: rgba(245, 245, 245, 0.788);
 	transition: all 0.5s ease;
 }
@@ -426,7 +422,7 @@ section .cards .text-card h3{
 	font-weight: 500;
 	width: fit-content;
 	text-decoration: none;
-	font-size: 0.8rem;
+	font-size: 10px;
 	color: rgba(255, 255, 255, 0.938);
 	transition: all 0.5s ease;
 }
@@ -585,12 +581,15 @@ section .cards .text-card h3{
 		/* height: 1700px; */
 	}
 }
-@media (max-width: 400px) {
+@media (max-width: 420px) {
 	.Hero_details h1 {
 		font-size: 1.5rem;
 	}
 	.class3 .elementor-section{
 		/* height: 1900px; */
+	}
+	.elementor{
+		margin-left: -5%;
 	}
 }
 @media (max-width: 625px) {
@@ -609,9 +608,12 @@ section .cards .text-card h3{
 }
 
 }
-@media (max-width: 500px) {
+@media (max-width: 600px) {
 	
-	.class3 .elementor-section{
-		/* height: 1900px; */
+	.cards{
+		width: 80%;
+	}
+	.contact .form{
+
 	}
 }
