--- a/style.css
+++ b/style.css
@@ -594,8 +594,8 @@ section .cards .text-card h3{
 }
 @media (max-width: 625px) {
 	.contact{
-    margin-left: 20;
-    padding-left: 20;
+    margin-left: 10px;
+    padding-left: 10px;
   }
   .contact input{
     width: 100%;
@@ -613,6 +613,10 @@ section .cards .text-card h3{
 	.cards{
 		width: 80%;
 	}
+	.contact{
+    margin-left: 5px;
+    padding-left: 5px;
+  }
 	.contact .form{
 
 	}
